fix argLine and compiler args of java11 profiles