@@ -2265,10 +2265,11 @@
 
         <!-- @formatter:off -->
         <profile>
-            <id>java-compiler-java-modules-without-groovy</id>
+            <id>java11-compiler-java-modules-without-groovy</id>
             <activation>
                 <file><missing>${basedir}/src/main/groovy</missing></file>
                 <property><name>java.addModules</name></property>
+                <jdk>[11,)</jdk>
             </activation>
             <build>
                 <plugins>
@@ -2282,9 +2283,10 @@
                                 <arg>--add-exports</arg><arg>java.base/sun.security.ssl=ALL-UNNAMED</arg>
                                 <arg>--add-exports</arg><arg>java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED</arg>
                                 <!--<arg>-\-add-exports</arg><arg>jdk.attach/sun.tools.attach=ALL-UNNAMED</arg>-->
+                                <arg>--add-opens</arg><arg>java.base/java.net=ALL-UNNAMED</arg>
                                 <arg>--add-opens</arg><arg>java.base/jdk.internal.loader=ALL-UNNAMED</arg>
                                 <arg>--add-opens</arg><arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
-                                <arg>--add-opens</arg><arg>java.base/java.net=ALL-UNNAMED</arg>
+                                <arg>--add-opens</arg><arg>java.base/sun.security.ssl=ALL-UNNAMED</arg>
                                 <!--<arg>-\-add-opens</arg><arg>jdk.attach/sun.tools.attach=ALL-UNNAMED</arg>-->
                             </compilerArgs>
                         </configuration>
@@ -2293,11 +2295,11 @@
             </build>
         </profile>
         <profile>
-            <id>java-compiler-java-modules-absent-without-groovy</id>
+            <id>java11-compiler-java-modules-absent-without-groovy</id>
             <activation>
                 <file><missing>${basedir}/src/main/groovy</missing></file>
                 <property><name>!java.addModules</name></property>
-                <jdk>[9,)</jdk>
+                <jdk>[11,)</jdk>
             </activation>
             <build>
                 <plugins>
@@ -2306,14 +2308,15 @@
                         <configuration>
                             <compilerArgs>
                                 <arg>--add-exports</arg><arg>java.base/jdk.internal.loader=ALL-UNNAMED</arg>
-                                <!--<arg>-add-exports</arg><arg>java.base/jdk.internal.perf=ALL-UNNAMED</arg>-->
+                                <!--<arg>-\-add-exports</arg><arg>java.base/jdk.internal.perf=ALL-UNNAMED</arg>-->
                                 <arg>--add-exports</arg><arg>java.base/sun.security.ssl=ALL-UNNAMED</arg>
                                 <arg>--add-exports</arg><arg>java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED</arg>
-                                <!--<arg>-add-exports</arg><arg>jdk.attach/sun.tools.attach=ALL-UNNAMED</arg>-->
+                                <!--<arg>-\-add-exports</arg><arg>jdk.attach/sun.tools.attach=ALL-UNNAMED</arg>-->
+                                <arg>--add-opens</arg><arg>java.base/java.net=ALL-UNNAMED</arg>
                                 <arg>--add-opens</arg><arg>java.base/jdk.internal.loader=ALL-UNNAMED</arg>
                                 <arg>--add-opens</arg><arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
-                                <arg>--add-opens</arg><arg>java.base/java.net=ALL-UNNAMED</arg>
-                                <!--<arg>-add-opens</arg><arg>jdk.attach/sun.tools.attach=ALL-UNNAMED</arg>-->
+                                <arg>--add-opens</arg><arg>java.base/sun.security.ssl=ALL-UNNAMED</arg>
+                                <!--<arg>-\-add-opens</arg><arg>jdk.attach/sun.tools.attach=ALL-UNNAMED</arg>-->
                             </compilerArgs>
                         </configuration>
                     </plugin>
@@ -2321,10 +2324,11 @@
             </build>
         </profile>
         <profile>
-            <id>java-compiler-java-modules-with-groovy</id>
+            <id>java11-compiler-java-modules-with-groovy</id>
             <activation>
                 <file><exists>${basedir}/src/main/groovy</exists></file>
                 <property><name>java.addModules</name></property>
+                <jdk>[11,)</jdk>
             </activation>
             <build>
                 <plugins>
@@ -2338,9 +2342,10 @@
                                 <arg>-J--add-exports</arg><arg>-Jjava.base/sun.security.ssl=ALL-UNNAMED</arg>
                                 <arg>-J--add-exports</arg><arg>-Jjava.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED</arg>
                                 <!--<arg>-J-\-add-exports</arg><arg>-Jjdk.attach/sun.tools.attach=ALL-UNNAMED</arg>-->
-                                <arg>-J--add-opens</arg><arg>java.base/jdk.internal.loader=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens</arg><arg>-Jjava.base/sun.nio.ch=ALL-UNNAMED</arg>
                                 <arg>-J--add-opens</arg><arg>-Jjava.base/java.net=ALL-UNNAMED</arg>
+                                <arg>-J--add-opens</arg><arg>-Jjava.base/jdk.internal.loader=ALL-UNNAMED</arg>
+                                <arg>-J--add-opens</arg><arg>-Jjava.base/sun.nio.ch=ALL-UNNAMED</arg>
+                                <arg>-J--add-opens</arg><arg>-Jjava.base/sun.security.ssl=ALL-UNNAMED</arg>
                                 <!--<arg>-J-\-add-opens</arg><arg>-Jjdk.attach/sun.tools.attach=ALL-UNNAMED</arg>-->
                             </compilerArgs>
                         </configuration>
@@ -2349,11 +2354,11 @@
             </build>
         </profile>
         <profile>
-            <id>java-compiler-java-modules-absent-with-groovy</id>
+            <id>java11-compiler-java-modules-absent-with-groovy</id>
             <activation>
                 <file><exists>${basedir}/src/main/groovy</exists></file>
                 <property><name>!java.addModules</name></property>
-                <jdk>[9,)</jdk>
+                <jdk>[11,)</jdk>
             </activation>
             <build>
                 <plugins>
@@ -2362,14 +2367,15 @@
                         <configuration>
                             <compilerArgs>
                                 <arg>-J--add-exports</arg><arg>-Jjava.base/jdk.internal.loader=ALL-UNNAMED</arg>
-                                <!--<arg>-J-add-exports</arg><arg>-Jjava.base/jdk.internal.perf=ALL-UNNAMED</arg>-->
+                                <!--<arg>-J-\-add-exports</arg><arg>-Jjava.base/jdk.internal.perf=ALL-UNNAMED</arg>-->
                                 <arg>-J--add-exports</arg><arg>-Jjava.base/sun.security.ssl=ALL-UNNAMED</arg>
                                 <arg>-J--add-exports</arg><arg>-Jjava.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED</arg>
-                                <!--<arg>-J-add-exports</arg><arg>-Jjdk.attach/sun.tools.attach=ALL-UNNAMED</arg>-->
-                                <arg>-J--add-opens</arg><arg>java.base/jdk.internal.loader=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens</arg><arg>-Jjava.base/sun.nio.ch=ALL-UNNAMED</arg>
+                                <!--<arg>-J-\-add-exports</arg><arg>-Jjdk.attach/sun.tools.attach=ALL-UNNAMED</arg>-->
                                 <arg>-J--add-opens</arg><arg>-Jjava.base/java.net=ALL-UNNAMED</arg>
-                                <!--<arg>-J-add-opens</arg><arg>-Jjdk.attach/sun.tools.attach=ALL-UNNAMED</arg>-->
+                                <arg>-J--add-opens</arg><arg>-Jjava.base/jdk.internal.loader=ALL-UNNAMED</arg>
+                                <arg>-J--add-opens</arg><arg>-Jjava.base/sun.nio.ch=ALL-UNNAMED</arg>
+                                <arg>-J--add-opens</arg><arg>-Jjava.base/sun.security.ssl=ALL-UNNAMED</arg>
+                                <!--<arg>-J-\-add-opens</arg><arg>-Jjdk.attach/sun.tools.attach=ALL-UNNAMED</arg>-->
                             </compilerArgs>
                         </configuration>
                     </plugin>
@@ -2460,6 +2466,18 @@
                                 <toolchains><jdk><version>9</version><!--<vendor>oracle</vendor>--></jdk></toolchains>
                             </configuration>
                         </plugin>
+                        <plugin>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <configuration>
+                                <argLine>${jacoco.agent.ut.arg} --add-modules java.xml.bind,java.xml.ws,java.xml.ws.annotation ${argLine}</argLine>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <artifactId>maven-failsafe-plugin</artifactId>
+                            <configuration>
+                                <argLine>${jacoco.agent.ut.arg} --add-modules java.xml.bind,java.xml.ws,java.xml.ws.annotation ${argLine}</argLine>
+                            </configuration>
+                        </plugin>
                     </plugins>
                 </pluginManagement>
                 <plugins>
@@ -2526,6 +2544,18 @@
                             <version>${version.maven-toolchains-plugin}</version>
                             <configuration>
                                 <toolchains><jdk><version>11</version><!--<vendor>oracle</vendor>--></jdk></toolchains>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <configuration>
+                                <argLine>${jacoco.agent.ut.arg} --illegal-access=permit --add-exports java.base/jdk.internal.loader=ALL-UNNAMED --add-exports java.base/sun.security.ssl=ALL-UNNAMED --add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.base/sun.security.ssl=ALL-UNNAMED ${argLine}</argLine>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <artifactId>maven-failsafe-plugin</artifactId>
+                            <configuration>
+                                <argLine>${jacoco.agent.ut.arg} --illegal-access=permit --add-exports java.base/jdk.internal.loader=ALL-UNNAMED --add-exports java.base/sun.security.ssl=ALL-UNNAMED --add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.base/sun.security.ssl=ALL-UNNAMED ${argLine}</argLine>
                             </configuration>
                         </plugin>
                     </plugins>
